index.css
.brand-image-anchor {
	margin-left: 50px;
}

.right-navbar-button {
	margin-right: 50px;
}

.features-icon {
	margin: 8px;
}

.dark-mode-pricing-card {
	background-color: #333;
	color: #fff;
}

.dark-mode-pricing-card .card-header {
	background-color: #555;
}

